[package]
name = "rnostr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
path = "src/main.rs"
name = "rnostr"

[dependencies]
actix-rt = "2.8.0"
anyhow = "1.0.70"
clap = { version = "4.2.7", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
indicatif = "0.17.3"
nostr-db = { path = "./db", features = ["search"]}
nostr-relay = { path = "./relay"}
rayon = "1.7.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
zstd = ["nostr-db/zstd"]

[workspace]

members = [
    "kv", 
    "kv/bench", 
    "db", 
    "db/bench", 
    "relay",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rnostr"
repository = "https://github.com/rnostr/rnostr.git"
authors = ["Arron zhang <arronzhang@me.com>"]
