[package]
name = "rnostr"
version = "0.4.3"
description = "A high-performance and scalable nostr relay."
keywords = ["nostr", "nostr-relay"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
path = "src/main.rs"
name = "rnostr"

[dependencies]
actix-rt = "2.8.0"
anyhow = "1.0.70"
clap = { version = "4.2.7", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
indicatif = "0.17.3"
nostr-db = { version = "0.4.3", path = "./db", features = ["search"] }
nostr-relay = { version = "0.4.3", path = "./relay", features = ["search"] }
nostr-extensions = { version = "0.4.3", path = "./extensions" }
rayon = "1.7.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# [features]
# zstd = ["nostr-db/zstd"]

[workspace]

members = ["kv", "kv/bench", "db", "db/bench", "relay", "extensions"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rnostr"
repository = "https://github.com/rnostr/rnostr.git"
authors = ["Arron zhang <arronzhang@me.com>"]
