[package]
name = "nostr-cli"
version = "0.1.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/arronzhang/nostr-db"
repository = "https://github.com/arronzhang/nostr-db.git"
authors = ["Arron zhang <arronzhang@me.com>"]

[[bin]]
path = "src/main.rs"
name = "nostr-db"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.7", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
indicatif = "0.17.3"
nostr-db = { path = "../db", features = ["search"]}
rayon = "1.7.0"
thiserror = "1.0.40"

[features]
zstd = ["nostr-db/zstd"]
