[package]
name = "nostr-db"
version = "0.4.3"
description = "Nostr event database"
keywords = ["nostr", "db", "lmdb"]
exclude = [".gitignore"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nostr-kv = { version = "0.3.1", path = "../kv" }
thiserror = "1.0.40"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rkyv = { version = "0.7.42", features = ["validation"] }
charabia = { version = "0.7.2", optional = true }
zstd = { version = "0.12.3", optional = true }
secp256k1 = { version = "0.27.0", features = ["global-context", "rand-std"] }
sha2 = "0.10.6"

[features]
zstd = ["dep:zstd"]
search = ["charabia"]

[dev-dependencies]
anyhow = "1.0.70"
tempfile = "3.4.0"

[[test]]
name = "db"
required-features = ["search"]
