[package]
name = "nostr-extensions"
version = "0.4.3"
description = "Nostr relay extensions."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]

nostr-relay = { version = "0.4.3", path = "../relay" }
metrics = "0.21.0"
metrics-exporter-prometheus = { version = "0.12.1", optional = true, default-features = false, features = [
    "push-gateway",
] }
metrics-util = { version = "0.15.0", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
actix = "0.13.0"
actix-web = "4.3.1"
parking_lot = "0.12.1"
tracing = "0.1.37"
governor = { version = "0.5.1", optional = true }

[features]
default = ["metrics", "rate_limiter", "count", "search"]
search = ["nostr-relay/search"]
metrics = ["metrics-exporter-prometheus", "metrics-util"]
rate_limiter = ["governor"]
count = []

[dev-dependencies]
actix-rt = "2.8.0"
actix-test = "0.1.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.70"
bytes = "1.4.0"
futures-util = "0.3.28"
temp-env = "0.3.4"
tempfile = "3.4.0"
tracing-subscriber = "0.3.17"
