[package]
name = "nostr-extensions"
version = "0.4.8"
description = "Nostr relay extensions."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]

nostr-relay = { version = "0.4.8", path = "../relay" }
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.3", optional = true, default-features = false, features = [
    "push-gateway",
] }
metrics-util = { version = "0.17.0", optional = true }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
actix = "0.13.5"
actix-web = "4.9.0"
parking_lot = "0.12.3"
tracing = "0.1.40"
governor = { version = "0.6.3", optional = true }

[features]
default = ["metrics", "rate_limiter", "count", "search"]
search = ["nostr-relay/search"]
metrics = ["metrics-exporter-prometheus", "metrics-util"]
rate_limiter = ["governor"]
count = []

[dev-dependencies]
actix-rt = "2.10.0"
actix-test = "0.1.5"
actix-web-actors = "4.3.1"
anyhow = "1.0.86"
bytes = "1.7.1"
futures-util = "0.3.30"
temp-env = "0.3.6"
tempfile = "3.12.0"
tracing-subscriber = "0.3.18"
