[package]
name = "nostr-kv"
version = "0.1.0"
description = "Lmdb api for nostr-db"
keywords = ["lmdb"]
exclude = [
    ".gitignore",
]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/arronzhang/nostr-db"
repository = "https://github.com/arronzhang/nostr-db.git"
authors = ["Arron zhang <arronzhang@me.com>"]

[dependencies]
libc = "0.2.144"
lmdb-master-sys = "0.1.0"
parking_lot = "0.12.1"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.70"
tempfile = "3.4.0"
