[package]
name = "nostr-kv"
version = "0.3.1"
description = "Lmdb api for nostr-db"
keywords = ["lmdb"]
exclude = [".gitignore"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2.144"
lmdb-master-sys = "0.1.0"
parking_lot = "0.12.1"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.70"
tempfile = "3.4.0"
