[package]
name = "nostr-kv"
version = "0.3.2"
description = "Lmdb api for nostr-db"
keywords = ["lmdb"]
exclude = [".gitignore"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2.158"
lmdb-master-sys = "0.2.4"
parking_lot = "0.12.3"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.86"
tempfile = "3.12.0"
