[package]
name = "nostr-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-http = "3.3.1"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
bytestring = "1.3.0"
config = { version = "0.13.3", features = ["toml"], default-features = false }
nostr-db = { path = "../db" }
notify = "6.0.0"
parking_lot = "0.12.1"
prometheus = "0.13.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
actix-rt = "2.8.0"
actix-test = "0.1.1"
anyhow = "1.0.70"
bytes = "1.4.0"
futures-util = "0.3.28"
tempfile = "3.4.0"
