[package]
name = "nostr-relay"
version = "0.4.3"
description = "A high-performance and scalable nostr relay library."
keywords = ["nostr", "nostr-relay"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actix = "0.13.0"
actix-http = "3.3.1"
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
bytestring = "1.3.0"
config = { version = "0.13.3", features = [
    "toml",
    "json",
], default-features = false }
duration-str = { version = "0.7.0", default-features = false }
hex = "0.4.3"
metrics = "0.21.0"
nostr-db = { version = "0.4.3", path = "../db" }
notify = "6.0.0"
num_cpus = "1.15.0"
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
bytes = "1.4.0"

[features]
search = ["nostr-db/search"]

[dev-dependencies]
actix-rt = "2.8.0"
actix-test = "0.1.1"
anyhow = "1.0.70"
futures-util = "0.3.28"
temp-env = "0.3.4"
tempfile = "3.4.0"
tracing-subscriber = "0.3.17"
