[package]
name = "nostr-relay"
version = "0.4.8"
description = "A high-performance and scalable nostr relay library."
keywords = ["nostr", "nostr-relay"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
actix = "0.13.5"
actix-http = "3.9.0"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
bytestring = "1.3.1"
config = { version = "0.14.0", features = [
    "toml",
    "json",
], default-features = false }
duration-str = { version = "0.11.2", default-features = false }
hex = "0.4.3"
metrics = "0.23.0"
nostr-db = { version = "0.4.5", path = "../db" }
notify = "6.1.1"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tracing = "0.1.40"
bytes = "1.7.1"

[features]
search = ["nostr-db/search"]

[dev-dependencies]
actix-rt = "2.10.0"
actix-test = "0.1.5"
anyhow = "1.0.86"
futures-util = "0.3.30"
temp-env = "0.3.6"
tempfile = "3.12.0"
tracing-subscriber = "0.3.18"
