[package]
name = "nostr-db-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.10.0"
anyhow = "1.0.86"
colored = "2.1.0"
tempfile = "3.12.0"
nostr-db = { path = "../"}
nostr-kv-bench = { path = "../../kv/bench"}
charabia = "0.9.0"
twox-hash = "1.6.3"

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "event"
harness = false
