[package]
name = "nostr-kv-bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
anyhow = "1.0.71"
criterion = "0.4.0"
lmdb-rkv = "0.14.0"
nostr-kv = { path = "../"}
tempfile = "3.5.0"
thiserror = "1.0.40"

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "scanner"
harness = false
