[package]
name = "nostr-kv-bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.10.0"

[dev-dependencies]
anyhow = "1.0.86"
criterion = "0.5.1"
lmdb-rkv = "0.14.0"
nostr-kv = { path = "../"}
tempfile = "3.12.0"
thiserror = "1.0.63"

[[bench]]
name = "iter"
harness = false

[[bench]]
name = "scanner"
harness = false
