[package]
name = "nokv-bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
criterion = "0.4.0"
lmdb-rkv = "0.14.0"
nokv = { path = "../"}
rand = "0.8.5"
tempfile = "3.5.0"

[[bench]]
name = "create"
harness = false